fix: validator error in swagger
