# app/Http/Controllers/Resources/Kpi/SecurityController.php
@@ -179,7 +179,7 @@ class SecurityController extends Controller
      *         @OA\MediaType(
      *             mediaType="application/json",
      *             @OA\Schema(
-     *                 required={"comment", "uuid"},
+     *                 required={"uuid"},
      *                 @OA\Property(
      *                     property="comment",
      *                     type="string",
